fixed overflow issue on mobile and font sizes

--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -51,14 +51,48 @@
     flex-direction: column;
     gap: 23px;
   }
+  .text h2 {
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 4px;
+  }
+  
+  .text p {
+    font-size: 20px;
+    font-weight: 200;
+    letter-spacing: 1px;
+  }
+  
+  .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    gap: 16px;
+  }
+  
+  .link {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+  }
+  
+  .link a {
+    color: var(--color-text);
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 200;
+    letter-spacing: 1px;
+  }
+
+  .link img {
+    width: 30px;
+    height: 30px;
+  }
 
   .text {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-
-  .links {
     align-items: center;
   }
 }
