--- a/src/components/experience/experience.module.css
+++ b/src/components/experience/experience.module.css
@@ -72,6 +72,9 @@
 }
 
 @media screen and (max-width: 830px) {
+  .container{
+    padding: 20px;
+  }
   .content {
     flex-direction: column;
     align-items: center;
