--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -105,7 +105,12 @@
 
 @media screen and (max-width: 830px) {
   .title {
-    font-size: 48px; 
+    margin-top: 10px;
+    font-size: 40px;
+  }
+  .description {
+    font-size: 20px;
+    margin-bottom: 20px;
   }
   .container {
     flex-direction: column-reverse;
