--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -8,9 +8,10 @@
   background-color: var(--color-bg);
   top: 0;
   width: 100%;
-  padding-right: 20px;
+  padding: 0 20px;
   z-index: 2;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .title {
@@ -44,14 +45,17 @@
 
 @media screen and (max-width: 830px) {
   .navbar {
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    padding: 0 10px;
+    box-sizing: border-box;
   }
 
   .menu {
     position: absolute;
     right: 0;
-    margin-right: 10%;
+    margin-right: 10px;
     flex-direction: column;
     align-items: flex-end;
     gap: 11px;
